--- a/css/index.html
+++ b/css/index.html
@@ -7,26 +7,50 @@
     <title>Test Webpage</title>
   </head>
   <body>
-    <h1>Translations of lorem</h1>
-    <hr />
-    <h3>Latin</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut beatae amet
-      velit, eaque fugiat maxime autem aperiam veniam dolor ratione earum
-      tempore officia commodi hic, expedita excepturi consequuntur possimus
-      dolorem!
-    </p>
-    <h3>English</h3>
-    <p>
-      The company itself is a very successful company. Or happy fun he wills,
-      and let him flee from them; at the time the services are convenient here,
-      we will be able to receive the expedient result sorrow!
-    </p>
-    <h3>Spanish</h3>
-    <p>
-      La empresa en sí es una empresa muy exitosa. o diversión feliz él quiere,
-      y huya de ellos; en el momento en que aquí convengan los servicios,
-      podremos recibir el resultado oportuno ¡pena!
-    </p>
+    <!-- *Unordered list -->
+    <h3>Grocery list</h3>
+    <ul style="list-style-type: square">
+      <li>bread dough</li>
+      <li>cheese</li>
+      <li>tomato sauce</li>
+      <li>peperoni</li>
+    </ul>
+
+    <!--*Ordered list-->
+    <h3>My TODO-list</h3>
+    <ol type="i">
+      <li>Do my assignment</li>
+      <li>Sleep early</li>
+      <li>Be productive</li>
+      <li>Be happy</li>
+    </ol>
+
+    <!--*Description list-->
+    <h3>Web Dev languages</h3>
+    <dl>
+      <dt>HTML</dt>
+      <dd>-adds structure to the webpage</dd>
+      <dt>CSS</dt>
+      <dd>-adds style to the webpage</dd>
+      <dt>Javascript</dt>
+      <dd>-adds functionality to the webpage</dd>
+    </dl>
+
+    <!-- *example of nested list -->
+    <h3>Grocery list</h3>
+    <ul style="list-style-type: square">
+      <li>bread dough</li>
+      <li>cheese</li>
+      <li>tomato sauce</li>
+      <li>
+        toppings
+        <ul style="list-style-type: georgian">
+          <li>peperoni</li>
+          <li>mushroom</li>
+          <li>pineapple</li>
+          <li>beef chuck</li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
