--- a/css/index.html
+++ b/css/index.html
@@ -4,53 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Webpage</title>
+    <title>Practice Website</title>
   </head>
   <body>
-    <!-- *Unordered list -->
-    <h3>Grocery list</h3>
-    <ul style="list-style-type: square">
-      <li>bread dough</li>
-      <li>cheese</li>
-      <li>tomato sauce</li>
-      <li>peperoni</li>
-    </ul>
-
-    <!--*Ordered list-->
-    <h3>My TODO-list</h3>
-    <ol type="i">
-      <li>Do my assignment</li>
-      <li>Sleep early</li>
-      <li>Be productive</li>
-      <li>Be happy</li>
-    </ol>
-
-    <!--*Description list-->
-    <h3>Web Dev languages</h3>
-    <dl>
-      <dt>HTML</dt>
-      <dd>-adds structure to the webpage</dd>
-      <dt>CSS</dt>
-      <dd>-adds style to the webpage</dd>
-      <dt>Javascript</dt>
-      <dd>-adds functionality to the webpage</dd>
-    </dl>
-
-    <!-- *example of nested list -->
-    <h3>Grocery list</h3>
-    <ul style="list-style-type: square">
-      <li>bread dough</li>
-      <li>cheese</li>
-      <li>tomato sauce</li>
-      <li>
-        toppings
-        <ul style="list-style-type: georgian">
-          <li>peperoni</li>
-          <li>mushroom</li>
-          <li>pineapple</li>
-          <li>beef chuck</li>
-        </ul>
-      </li>
-    </ul>
+    <audio controls>
+      <source src="Quiz.mp3" />
+      your browser doesn't support audio
+    </audio>
   </body>
 </html>
