--- a/css/index.html
+++ b/css/index.html
@@ -7,27 +7,11 @@
     <title>Practice Website</title>
   </head>
   <body>
-    <button name="simple_button" type="button">Click me :(</button>
-    <button name="submit_button" type="submit" value="Submit">Submit</button>
-    <button name="reset_button" type="reset" value="Reset">Reset</button>
-    <button disabled>Disabled</button>
-    <button autofocus>Autofocus</button>
-    <button onclick="alert('you click a button')">Onclick</button>
-    <a href="https://www.google.com">
-      <button>Google</button>
-    </a>
-    <br />
-    <br />
+    <form>
+      <label for="first_name">First Name:</label>
+      <input type="text" id="first_name" name="first_name"/>
+      
 
-    <button
-      style="
-        background-color: darkblue;
-        color: beige;
-        font-size: 18px;
-        font-family: monospace;
-      "
-    >
-      CSS Style
-    </button>
+    </form>
   </body>
 </html>
