--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
               <img src="img/person1.jpg" alt="" />
               <div class="name">Full name</div>
               <div class="stars">
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
@@ -43,11 +43,11 @@
               <img src="img/person2.jpg" alt="" />
               <div class="name">Full name</div>
               <div class="stars">
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
@@ -63,11 +63,11 @@
               <img src="img/person3.jpg" alt="" />
               <div class="name">Full name</div>
               <div class="stars">
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
